exports[`Storyshots Button with append className 1`] = `
<div
  className="button-wrap">
  <div
    className="undefined
                      
                      foobar
                      undefined
          ">
    <button
      className="undefined "
      onClick={[Function]}>
      <i
        aria-hidden="true"
        className="
                    undefined
                    undefined
                  " />
      Search
    </button>
  </div>
</div>
`;

exports[`Storyshots Button with basic usage 1`] = `
<div
  className="button-wrap">
  <div
    className="undefined
                      
                      
                      undefined
          ">
    <button
      className="undefined "
      onClick={[Function]}>
      <i
        aria-hidden="true"
        className="
                    undefined
                    undefined
                  " />
      Search
    </button>
  </div>
</div>
`;

exports[`Storyshots Button with customize icon 1`] = `
<div
  className="button-wrap">
  <div
    className="undefined
                      
                      
                      undefined
          ">
    <button
      className="undefined "
      onClick={[Function]}>
      <i
        aria-hidden="true"
        className="
                    undefined
                    undefined
                  " />
      Edit
    </button>
  </div>
</div>
`;

exports[`Storyshots Button with customize styles 1`] = `
<div
  className="button-wrap">
  <div
    className="undefined
                      
                      
                      undefined
          ">
    <button
      className="undefined "
      onClick={[Function]}>
      <i
        aria-hidden="true"
        className="
                    undefined
                    undefined
                  " />
      Search
    </button>
  </div>
</div>
`;

exports[`Storyshots Button with disabled 1`] = `
<div
  className="button-wrap">
  <div
    className="undefined
                      
                      
                      undefined
          ">
    <button
      className="undefined undefined"
      onClick={[Function]}>
      <i
        aria-hidden="true"
        className="
                    undefined
                    undefined
                  " />
      Search
    </button>
  </div>
</div>
`;

exports[`Storyshots Button with event handling 1`] = `
<div
  className="button-wrap">
  <div
    className="undefined
                      
                      
                      undefined
          ">
    <button
      className="undefined "
      onClick={[Function]}>
      <i
        aria-hidden="true"
        className="
                    undefined
                    undefined
                  " />
      Search
    </button>
  </div>
</div>
`;

exports[`Storyshots Button with progress error 1`] = `
<div
  className="button-wrap">
  <div
    className="undefined
                      
                      
                      undefined
          ">
    <button
      className="undefined "
      onClick={[Function]}>
      <i
        aria-hidden="true"
        className="
                    undefined
                    undefined
                  " />
      Search
    </button>
  </div>
</div>
`;

exports[`Storyshots Button with progress loading 1`] = `
<div
  className="button-wrap">
  <div
    className="undefined
                      
                      
                      undefined
          ">
    <button
      className="undefined "
      onClick={[Function]}>
      <i
        aria-hidden="true"
        className="
                    undefined
                    undefined
                  " />
      Search
    </button>
  </div>
</div>
`;

exports[`Storyshots Button with progress success 1`] = `
<div
  className="button-wrap">
  <div
    className="undefined
                      
                      
                      undefined
          ">
    <button
      className="undefined "
      onClick={[Function]}>
      <i
        aria-hidden="true"
        className="
                    undefined
                    undefined
                  " />
      Search
    </button>
  </div>
</div>
`;

exports[`Storyshots Cards with append className 1`] = `
<div
  className="cardss-wrap">
  <ul
    className="undefined
                  undefined
                  undefined
                  undefined
                  
                  foobar">
    <li
      className={undefined}>
      <button
        className="undefined
                              
                              "
        onClick={[Function]}>
        <div
          className={undefined}
          style={
            Object {
              "backgroundImage": "url(./images/corkboard.jpg)",
            }
          } />
        <div
          className="undefined " />
        <div
          className={undefined}
          style={
            Object {
              "whiteSpace": "nowrap",
            }
          }>
          Cork Board
        </div>
      </button>
    </li>
    <li
      className={undefined}>
      <button
        className="undefined
                              
                              "
        onClick={[Function]}>
        <div
          className={undefined}
          style={
            Object {
              "backgroundImage": "url(./images/blueboard.jpg)",
            }
          } />
        <div
          className="undefined " />
        <div
          className={undefined}
          style={
            Object {
              "whiteSpace": "nowrap",
            }
          }>
          Blue Board
        </div>
      </button>
    </li>
    <li
      className={undefined}>
      <button
        className="undefined
                              
                              "
        onClick={[Function]}>
        <div
          className={undefined}
          style={
            Object {
              "backgroundImage": "url(./images/stripe.jpg)",
            }
          } />
        <div
          className="undefined " />
        <div
          className={undefined}
          style={
            Object {
              "whiteSpace": "nowrap",
            }
          }>
          Stripe
        </div>
      </button>
    </li>
    <li
      className={undefined}>
      <button
        className="undefined
                              
                              "
        onClick={[Function]}>
        <div
          className={undefined}
          style={
            Object {
              "backgroundImage": "url(./images/goldgrazing.jpg)",
            }
          } />
        <div
          className="undefined " />
        <div
          className={undefined}
          style={
            Object {
              "whiteSpace": "nowrap",
            }
          }>
          Gold Grazing
        </div>
      </button>
    </li>
    <li>
      <span />
    </li>
  </ul>
</div>
`;

exports[`Storyshots Cards with basic usage 1`] = `
<div
  className="cardss-wrap">
  <ul
    className="undefined
                  undefined
                  undefined
                  undefined
                  
                  ">
    <li
      className={undefined}>
      <button
        className="undefined
                              
                              "
        onClick={[Function]}>
        <div
          className={undefined}
          style={
            Object {
              "backgroundImage": "url(./images/corkboard.jpg)",
            }
          } />
        <div
          className="undefined " />
        <div
          className={undefined}
          style={
            Object {
              "whiteSpace": "nowrap",
            }
          }>
          Cork Board
        </div>
      </button>
    </li>
    <li
      className={undefined}>
      <button
        className="undefined
                              
                              "
        onClick={[Function]}>
        <div
          className={undefined}
          style={
            Object {
              "backgroundImage": "url(./images/blueboard.jpg)",
            }
          } />
        <div
          className="undefined " />
        <div
          className={undefined}
          style={
            Object {
              "whiteSpace": "nowrap",
            }
          }>
          Blue Board
        </div>
      </button>
    </li>
    <li
      className={undefined}>
      <button
        className="undefined
                              
                              "
        onClick={[Function]}>
        <div
          className={undefined}
          style={
            Object {
              "backgroundImage": "url(./images/stripe.jpg)",
            }
          } />
        <div
          className="undefined " />
        <div
          className={undefined}
          style={
            Object {
              "whiteSpace": "nowrap",
            }
          }>
          Stripe
        </div>
      </button>
    </li>
    <li
      className={undefined}>
      <button
        className="undefined
                              
                              "
        onClick={[Function]}>
        <div
          className={undefined}
          style={
            Object {
              "backgroundImage": "url(./images/goldgrazing.jpg)",
            }
          } />
        <div
          className="undefined " />
        <div
          className={undefined}
          style={
            Object {
              "whiteSpace": "nowrap",
            }
          }>
          Gold Grazing
        </div>
      </button>
    </li>
    <li>
      <span />
    </li>
  </ul>
</div>
`;

exports[`Storyshots Cards with bottom position text 1`] = `
<div
  className="cardss-wrap">
  <ul
    className="undefined
                  undefined
                  undefined
                  undefined
                  
                  ">
    <li
      className={undefined}>
      <button
        className="undefined
                              
                              "
        onClick={[Function]}>
        <div
          className={undefined}
          style={
            Object {
              "backgroundImage": "url(./images/corkboard.jpg)",
            }
          } />
        <div
          className="undefined " />
        <div
          className={undefined}
          style={
            Object {
              "whiteSpace": "nowrap",
            }
          }>
          Cork Board
        </div>
      </button>
    </li>
    <li
      className={undefined}>
      <button
        className="undefined
                              
                              "
        onClick={[Function]}>
        <div
          className={undefined}
          style={
            Object {
              "backgroundImage": "url(./images/blueboard.jpg)",
            }
          } />
        <div
          className="undefined " />
        <div
          className={undefined}
          style={
            Object {
              "whiteSpace": "nowrap",
            }
          }>
          Blue Board
        </div>
      </button>
    </li>
    <li
      className={undefined}>
      <button
        className="undefined
                              
                              "
        onClick={[Function]}>
        <div
          className={undefined}
          style={
            Object {
              "backgroundImage": "url(./images/stripe.jpg)",
            }
          } />
        <div
          className="undefined " />
        <div
          className={undefined}
          style={
            Object {
              "whiteSpace": "nowrap",
            }
          }>
          Stripe
        </div>
      </button>
    </li>
    <li
      className={undefined}>
      <button
        className="undefined
                              
                              "
        onClick={[Function]}>
        <div
          className={undefined}
          style={
            Object {
              "backgroundImage": "url(./images/goldgrazing.jpg)",
            }
          } />
        <div
          className="undefined " />
        <div
          className={undefined}
          style={
            Object {
              "whiteSpace": "nowrap",
            }
          }>
          Gold Grazing
        </div>
      </button>
    </li>
    <li>
      <span />
    </li>
  </ul>
</div>
`;

exports[`Storyshots Cards with classic theme 1`] = `
<div
  className="cardss-wrap">
  <ul
    className="undefined
                  undefined
                  undefined
                  undefined
                  
                  ">
    <li
      className={undefined}>
      <button
        className="undefined
                              
                              "
        onClick={[Function]}>
        <div
          className={undefined}
          style={
            Object {
              "backgroundImage": "url(./images/corkboard.jpg)",
            }
          } />
        <div
          className="undefined " />
        <div
          className={undefined}
          style={
            Object {
              "whiteSpace": "nowrap",
            }
          }>
          Cork Board
        </div>
      </button>
    </li>
    <li
      className={undefined}>
      <button
        className="undefined
                              
                              "
        onClick={[Function]}>
        <div
          className={undefined}
          style={
            Object {
              "backgroundImage": "url(./images/blueboard.jpg)",
            }
          } />
        <div
          className="undefined " />
        <div
          className={undefined}
          style={
            Object {
              "whiteSpace": "nowrap",
            }
          }>
          Blue Board
        </div>
      </button>
    </li>
    <li
      className={undefined}>
      <button
        className="undefined
                              
                              "
        onClick={[Function]}>
        <div
          className={undefined}
          style={
            Object {
              "backgroundImage": "url(./images/stripe.jpg)",
            }
          } />
        <div
          className="undefined " />
        <div
          className={undefined}
          style={
            Object {
              "whiteSpace": "nowrap",
            }
          }>
          Stripe
        </div>
      </button>
    </li>
    <li
      className={undefined}>
      <button
        className="undefined
                              
                              "
        onClick={[Function]}>
        <div
          className={undefined}
          style={
            Object {
              "backgroundImage": "url(./images/goldgrazing.jpg)",
            }
          } />
        <div
          className="undefined " />
        <div
          className={undefined}
          style={
            Object {
              "whiteSpace": "nowrap",
            }
          }>
          Gold Grazing
        </div>
      </button>
    </li>
    <li>
      <span />
    </li>
  </ul>
</div>
`;

exports[`Storyshots Cards with cover interaction 1`] = `
<div
  className="cardss-wrap">
  <ul
    className="undefined
                  undefined
                  undefined
                  undefined
                  
                  ">
    <li
      className={undefined}>
      <button
        className="undefined
                              
                              "
        onClick={[Function]}>
        <div
          className={undefined}
          style={
            Object {
              "backgroundImage": "url(./images/corkboard.jpg)",
            }
          } />
        <div
          className="undefined " />
        <div
          className={undefined}
          style={
            Object {
              "whiteSpace": "nowrap",
            }
          }>
          Cork Board
        </div>
      </button>
    </li>
    <li
      className={undefined}>
      <button
        className="undefined
                              
                              "
        onClick={[Function]}>
        <div
          className={undefined}
          style={
            Object {
              "backgroundImage": "url(./images/blueboard.jpg)",
            }
          } />
        <div
          className="undefined " />
        <div
          className={undefined}
          style={
            Object {
              "whiteSpace": "nowrap",
            }
          }>
          Blue Board
        </div>
      </button>
    </li>
    <li
      className={undefined}>
      <button
        className="undefined
                              
                              "
        onClick={[Function]}>
        <div
          className={undefined}
          style={
            Object {
              "backgroundImage": "url(./images/stripe.jpg)",
            }
          } />
        <div
          className="undefined " />
        <div
          className={undefined}
          style={
            Object {
              "whiteSpace": "nowrap",
            }
          }>
          Stripe
        </div>
      </button>
    </li>
    <li
      className={undefined}>
      <button
        className="undefined
                              
                              "
        onClick={[Function]}>
        <div
          className={undefined}
          style={
            Object {
              "backgroundImage": "url(./images/goldgrazing.jpg)",
            }
          } />
        <div
          className="undefined " />
        <div
          className={undefined}
          style={
            Object {
              "whiteSpace": "nowrap",
            }
          }>
          Gold Grazing
        </div>
      </button>
    </li>
    <li>
      <span />
    </li>
  </ul>
</div>
`;

exports[`Storyshots Cards with customize styles 1`] = `
<div
  className="cardss-wrap">
  <ul
    className="undefined
                  undefined
                  undefined
                  undefined
                  
                  ">
    <li>
      <span />
    </li>
  </ul>
</div>
`;

exports[`Storyshots Cards with event handling 1`] = `
<div
  className="cardss-wrap">
  <ul
    className="undefined
                  undefined
                  undefined
                  undefined
                  
                  ">
    <li
      className={undefined}>
      <button
        className="undefined
                              
                              "
        onClick={[Function]}>
        <div
          className={undefined}
          style={
            Object {
              "backgroundImage": "url(./images/corkboard.jpg)",
            }
          } />
        <div
          className="undefined " />
        <div
          className={undefined}
          style={
            Object {
              "whiteSpace": "nowrap",
            }
          }>
          Cork Board
        </div>
      </button>
    </li>
    <li
      className={undefined}>
      <button
        className="undefined
                              
                              "
        onClick={[Function]}>
        <div
          className={undefined}
          style={
            Object {
              "backgroundImage": "url(./images/blueboard.jpg)",
            }
          } />
        <div
          className="undefined " />
        <div
          className={undefined}
          style={
            Object {
              "whiteSpace": "nowrap",
            }
          }>
          Blue Board
        </div>
      </button>
    </li>
    <li
      className={undefined}>
      <button
        className="undefined
                              
                              "
        onClick={[Function]}>
        <div
          className={undefined}
          style={
            Object {
              "backgroundImage": "url(./images/stripe.jpg)",
            }
          } />
        <div
          className="undefined " />
        <div
          className={undefined}
          style={
            Object {
              "whiteSpace": "nowrap",
            }
          }>
          Stripe
        </div>
      </button>
    </li>
    <li
      className={undefined}>
      <button
        className="undefined
                              
                              "
        onClick={[Function]}>
        <div
          className={undefined}
          style={
            Object {
              "backgroundImage": "url(./images/goldgrazing.jpg)",
            }
          } />
        <div
          className="undefined " />
        <div
          className={undefined}
          style={
            Object {
              "whiteSpace": "nowrap",
            }
          }>
          Gold Grazing
        </div>
      </button>
    </li>
    <li>
      <span />
    </li>
  </ul>
</div>
`;

exports[`Storyshots Cards with no title item caset 1`] = `
<div
  className="cardss-wrap">
  <ul
    className="undefined
                  undefined
                  undefined
                  undefined
                  
                  ">
    <li
      className={undefined}>
      <button
        className="undefined
                              
                              "
        onClick={[Function]}>
        <div
          className={undefined}
          style={
            Object {
              "backgroundImage": "url(./images/corkboard.jpg)",
            }
          } />
        <div
          className="undefined undefined" />
        
      </button>
    </li>
    <li
      className={undefined}>
      <button
        className="undefined
                              
                              "
        onClick={[Function]}>
        <div
          className={undefined}
          style={
            Object {
              "backgroundImage": "url(./images/blueboard.jpg)",
            }
          } />
        <div
          className="undefined undefined" />
        
      </button>
    </li>
    <li
      className={undefined}>
      <button
        className="undefined
                              
                              "
        onClick={[Function]}>
        <div
          className={undefined}
          style={
            Object {
              "backgroundImage": "url(./images/stripe.jpg)",
            }
          } />
        <div
          className="undefined undefined" />
        
      </button>
    </li>
    <li
      className={undefined}>
      <button
        className="undefined
                              
                              "
        onClick={[Function]}>
        <div
          className={undefined}
          style={
            Object {
              "backgroundImage": "url(./images/goldgrazing.jpg)",
            }
          } />
        <div
          className="undefined undefined" />
        
      </button>
    </li>
    <li>
      <span />
    </li>
  </ul>
</div>
`;

exports[`Storyshots Cards with selected item caset 1`] = `
<div
  className="cardss-wrap">
  <ul
    className="undefined
                  undefined
                  undefined
                  undefined
                  
                  ">
    <li
      className={undefined}>
      <button
        className="undefined
                              
                              "
        onClick={[Function]}>
        <div
          className={undefined}
          style={
            Object {
              "backgroundImage": "url(./images/corkboard.jpg)",
            }
          } />
        <div
          className="undefined " />
        <div
          className={undefined}
          style={
            Object {
              "whiteSpace": "nowrap",
            }
          }>
          Cork Board
        </div>
      </button>
    </li>
    <li
      className={undefined}>
      <button
        className="undefined
                              undefined
                              "
        onClick={[Function]}>
        <div
          className={undefined}
          style={
            Object {
              "backgroundImage": "url(./images/blueboard.jpg)",
            }
          } />
        <div
          className="undefined " />
        <div
          className={undefined}
          style={
            Object {
              "whiteSpace": "nowrap",
            }
          }>
          Blue Board
        </div>
      </button>
    </li>
    <li
      className={undefined}>
      <button
        className="undefined
                              
                              "
        onClick={[Function]}>
        <div
          className={undefined}
          style={
            Object {
              "backgroundImage": "url(./images/stripe.jpg)",
            }
          } />
        <div
          className="undefined " />
        <div
          className={undefined}
          style={
            Object {
              "whiteSpace": "nowrap",
            }
          }>
          Stripe
        </div>
      </button>
    </li>
    <li
      className={undefined}>
      <button
        className="undefined
                              undefined
                              "
        onClick={[Function]}>
        <div
          className={undefined}
          style={
            Object {
              "backgroundImage": "url(./images/goldgrazing.jpg)",
            }
          } />
        <div
          className="undefined " />
        <div
          className={undefined}
          style={
            Object {
              "whiteSpace": "nowrap",
            }
          }>
          Gold Grazing
        </div>
      </button>
    </li>
    <li>
      <span />
    </li>
  </ul>
</div>
`;

exports[`Storyshots Cards with spacing cardss 1`] = `
<div
  className="cardss-wrap">
  <ul
    className="undefined
                  undefined
                  undefined
                  undefined
                  undefined
                  ">
    <li
      className={undefined}>
      <button
        className="undefined
                              
                              "
        onClick={[Function]}>
        <div
          className={undefined}
          style={
            Object {
              "backgroundImage": "url(./images/corkboard.jpg)",
            }
          } />
        <div
          className="undefined " />
        <div
          className={undefined}
          style={
            Object {
              "whiteSpace": "nowrap",
            }
          }>
          Cork Board
        </div>
      </button>
    </li>
    <li
      className={undefined}>
      <button
        className="undefined
                              
                              "
        onClick={[Function]}>
        <div
          className={undefined}
          style={
            Object {
              "backgroundImage": "url(./images/blueboard.jpg)",
            }
          } />
        <div
          className="undefined " />
        <div
          className={undefined}
          style={
            Object {
              "whiteSpace": "nowrap",
            }
          }>
          Blue Board
        </div>
      </button>
    </li>
    <li
      className={undefined}>
      <button
        className="undefined
                              
                              "
        onClick={[Function]}>
        <div
          className={undefined}
          style={
            Object {
              "backgroundImage": "url(./images/stripe.jpg)",
            }
          } />
        <div
          className="undefined " />
        <div
          className={undefined}
          style={
            Object {
              "whiteSpace": "nowrap",
            }
          }>
          Stripe
        </div>
      </button>
    </li>
    <li
      className={undefined}>
      <button
        className="undefined
                              
                              "
        onClick={[Function]}>
        <div
          className={undefined}
          style={
            Object {
              "backgroundImage": "url(./images/goldgrazing.jpg)",
            }
          } />
        <div
          className="undefined " />
        <div
          className={undefined}
          style={
            Object {
              "whiteSpace": "nowrap",
            }
          }>
          Gold Grazing
        </div>
      </button>
    </li>
    <li>
      <span />
    </li>
  </ul>
</div>
`;

exports[`Storyshots Cards with top position text 1`] = `
<div
  className="cardss-wrap">
  <ul
    className="undefined
                  undefined
                  undefined
                  undefined
                  
                  ">
    <li
      className={undefined}>
      <button
        className="undefined
                              
                              "
        onClick={[Function]}>
        <div
          className={undefined}
          style={
            Object {
              "backgroundImage": "url(./images/corkboard.jpg)",
            }
          } />
        <div
          className="undefined " />
        <div
          className={undefined}
          style={
            Object {
              "whiteSpace": "nowrap",
            }
          }>
          Cork Board
        </div>
      </button>
    </li>
    <li
      className={undefined}>
      <button
        className="undefined
                              
                              "
        onClick={[Function]}>
        <div
          className={undefined}
          style={
            Object {
              "backgroundImage": "url(./images/blueboard.jpg)",
            }
          } />
        <div
          className="undefined " />
        <div
          className={undefined}
          style={
            Object {
              "whiteSpace": "nowrap",
            }
          }>
          Blue Board
        </div>
      </button>
    </li>
    <li
      className={undefined}>
      <button
        className="undefined
                              
                              "
        onClick={[Function]}>
        <div
          className={undefined}
          style={
            Object {
              "backgroundImage": "url(./images/stripe.jpg)",
            }
          } />
        <div
          className="undefined " />
        <div
          className={undefined}
          style={
            Object {
              "whiteSpace": "nowrap",
            }
          }>
          Stripe
        </div>
      </button>
    </li>
    <li
      className={undefined}>
      <button
        className="undefined
                              
                              "
        onClick={[Function]}>
        <div
          className={undefined}
          style={
            Object {
              "backgroundImage": "url(./images/goldgrazing.jpg)",
            }
          } />
        <div
          className="undefined " />
        <div
          className={undefined}
          style={
            Object {
              "whiteSpace": "nowrap",
            }
          }>
          Gold Grazing
        </div>
      </button>
    </li>
    <li>
      <span />
    </li>
  </ul>
</div>
`;

exports[`Storyshots Cards with unclickable 1`] = `
<div
  className="cardss-wrap">
  <ul
    className="undefined
                  undefined
                  undefined
                  undefined
                  
                  ">
    <li
      className={undefined}>
      <button
        className="undefined
                              
                              undefined"
        onClick={[Function]}>
        <div
          className={undefined}
          style={
            Object {
              "backgroundImage": "url(./images/corkboard.jpg)",
            }
          } />
        <div
          className="undefined " />
        <div
          className={undefined}
          style={
            Object {
              "whiteSpace": "nowrap",
            }
          }>
          Cork Board
        </div>
      </button>
    </li>
    <li
      className={undefined}>
      <button
        className="undefined
                              
                              undefined"
        onClick={[Function]}>
        <div
          className={undefined}
          style={
            Object {
              "backgroundImage": "url(./images/blueboard.jpg)",
            }
          } />
        <div
          className="undefined " />
        <div
          className={undefined}
          style={
            Object {
              "whiteSpace": "nowrap",
            }
          }>
          Blue Board
        </div>
      </button>
    </li>
    <li
      className={undefined}>
      <button
        className="undefined
                              
                              undefined"
        onClick={[Function]}>
        <div
          className={undefined}
          style={
            Object {
              "backgroundImage": "url(./images/stripe.jpg)",
            }
          } />
        <div
          className="undefined " />
        <div
          className={undefined}
          style={
            Object {
              "whiteSpace": "nowrap",
            }
          }>
          Stripe
        </div>
      </button>
    </li>
    <li
      className={undefined}>
      <button
        className="undefined
                              
                              undefined"
        onClick={[Function]}>
        <div
          className={undefined}
          style={
            Object {
              "backgroundImage": "url(./images/goldgrazing.jpg)",
            }
          } />
        <div
          className="undefined " />
        <div
          className={undefined}
          style={
            Object {
              "whiteSpace": "nowrap",
            }
          }>
          Gold Grazing
        </div>
      </button>
    </li>
    <li>
      <span />
    </li>
  </ul>
</div>
`;

exports[`Storyshots Chips with basic usage 1`] = `
<div
  className="input-wrap">
  <div
    className="">
    <div
      className="undefined
                        
                        
                undefined
                
              
                        undefined
            ">
      <input
        className={undefined}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        placeholder=""
        value="" />
      <i
        aria-hidden="true"
        className="
                  undefined
                  undefined
                  undefined
                " />
    </div>
    <div
      className={undefined}>
      <ul
        className={undefined}>
        
      </ul>
    </div>
    <ul
      className={undefined} />
  </div>
</div>
`;

exports[`Storyshots Input with append className 1`] = `
<div
  className="input-wrap">
  <div
    className="undefined
                      
                      foobar
                      undefined
          ">
    <input
      className={undefined}
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      placeholder=""
      value="" />
    <i
      aria-hidden="true"
      className="
                undefined
                undefined
                undefined
              " />
  </div>
</div>
`;

exports[`Storyshots Input with basic usage 1`] = `
<div
  className="input-wrap">
  <div
    className="undefined
                      
                      
                      undefined
          ">
    <input
      className={undefined}
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      placeholder=""
      value="" />
    <i
      aria-hidden="true"
      className="
                undefined
                undefined
                undefined
              " />
  </div>
</div>
`;

exports[`Storyshots Input with customize icon 1`] = `
<div
  className="input-wrap">
  <div
    className="undefined
                      
                      
                      undefined
          ">
    <input
      className={undefined}
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      placeholder=""
      value="" />
    <i
      aria-hidden="true"
      className="
                undefined
                undefined
                undefined
              " />
  </div>
</div>
`;

exports[`Storyshots Input with customize styles 1`] = `
<div
  className="input-wrap">
  <div
    className="undefined
                      
                      
                      undefined
          ">
    <input
      className={undefined}
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      placeholder=""
      value="" />
    <i
      aria-hidden="true"
      className="
                undefined
                undefined
                undefined
              " />
  </div>
</div>
`;

exports[`Storyshots Input with default value 1`] = `
<div
  className="input-wrap">
  <div
    className="undefined
                      
                      
                      undefined
          ">
    <input
      className={undefined}
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      placeholder=""
      value="FooBar" />
    <i
      aria-hidden="true"
      className="
                undefined
                undefined
                undefined
              " />
  </div>
</div>
`;

exports[`Storyshots Input with event handler 1`] = `
<div
  className="input-wrap">
  <div
    className="undefined
                      
                      
                      undefined
          ">
    <input
      className={undefined}
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      placeholder=""
      value="" />
    <i
      aria-hidden="true"
      className="
                undefined
                undefined
                undefined
              " />
  </div>
</div>
`;

exports[`Storyshots Input with focused 1`] = `
<div
  className="input-wrap">
  <div
    className="undefined
                      
                      
                      undefined
          ">
    <input
      className={undefined}
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      placeholder=""
      value="" />
    <i
      aria-hidden="true"
      className="
                undefined
                undefined
                undefined
              " />
  </div>
</div>
`;

exports[`Storyshots Input with placeholder 1`] = `
<div
  className="input-wrap">
  <div
    className="undefined
                      
                      
                      undefined
          ">
    <input
      className={undefined}
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      placeholder="Find something"
      value="" />
    <i
      aria-hidden="true"
      className="
                undefined
                undefined
                undefined
              " />
  </div>
</div>
`;

exports[`Storyshots Input with progress error 1`] = `
<div
  className="input-wrap">
  <div
    className="undefined
                      
                      
                      undefined
          ">
    <input
      className={undefined}
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      placeholder=""
      value="" />
    <i
      aria-hidden="true"
      className="
                undefined
                undefined
                undefined
              " />
  </div>
</div>
`;

exports[`Storyshots Input with progress loading 1`] = `
<div
  className="input-wrap">
  <div
    className="undefined
                      
                      
                      undefined
          ">
    <input
      className={undefined}
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      placeholder=""
      value="" />
    <i
      aria-hidden="true"
      className="
                undefined
                undefined
                undefined
              " />
  </div>
</div>
`;

exports[`Storyshots Input with progress success 1`] = `
<div
  className="input-wrap">
  <div
    className="undefined
                      
                      
                      undefined
          ">
    <input
      className={undefined}
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      placeholder=""
      value="" />
    <i
      aria-hidden="true"
      className="
                undefined
                undefined
                undefined
              " />
  </div>
</div>
`;

exports[`Storyshots InputtableButton with append className 1`] = `
<div
  className="input-wrap">
  <div
    className="undefined
                      
                      foobar
                      undefined
          ">
    <button
      className={undefined}
      onClick={[Function]}>
      <i
        aria-hidden="true"
        className="undefined undefined" />
      Search
    </button>
    <input
      className={undefined}
      onBlur={[Function]}
      onChange={[Function]}
      onKeyDown={[Function]}
      placeholder="" />
    <i
      aria-hidden="true"
      className="
                undefined
                undefined
                undefined
              " />
  </div>
</div>
`;

exports[`Storyshots InputtableButton with basic usage 1`] = `
<div
  className="input-wrap">
  <div
    className="undefined
                      
                      
                      undefined
          ">
    <button
      className={undefined}
      onClick={[Function]}>
      <i
        aria-hidden="true"
        className="undefined undefined" />
      Search
    </button>
    <input
      className={undefined}
      onBlur={[Function]}
      onChange={[Function]}
      onKeyDown={[Function]}
      placeholder="" />
    <i
      aria-hidden="true"
      className="
                undefined
                undefined
                undefined
              " />
  </div>
</div>
`;

exports[`Storyshots InputtableButton with customize icon 1`] = `
<div
  className="input-wrap">
  <div
    className="undefined
                      
                      
                      undefined
          ">
    <button
      className={undefined}
      onClick={[Function]}>
      <i
        aria-hidden="true"
        className="undefined undefined" />
      Search
    </button>
    <input
      className={undefined}
      onBlur={[Function]}
      onChange={[Function]}
      onKeyDown={[Function]}
      placeholder="" />
    <i
      aria-hidden="true"
      className="
                undefined
                undefined
                undefined
              " />
  </div>
</div>
`;

exports[`Storyshots InputtableButton with customize styles 1`] = `
<div
  className="input-wrap">
  <div
    className="undefined
                      
                      
                      undefined
          ">
    <button
      className={undefined}
      onClick={[Function]}>
      <i
        aria-hidden="true"
        className="undefined undefined" />
      Search
    </button>
    <input
      className={undefined}
      onBlur={[Function]}
      onChange={[Function]}
      onKeyDown={[Function]}
      placeholder="" />
    <i
      aria-hidden="true"
      className="
                undefined
                undefined
                undefined
              " />
  </div>
</div>
`;

exports[`Storyshots InputtableButton with default value 1`] = `
<div
  className="input-wrap">
  <div
    className="undefined
                      
                      
                      undefined
          ">
    <button
      className={undefined}
      onClick={[Function]}>
      <i
        aria-hidden="true"
        className="undefined undefined" />
      Search
    </button>
    <input
      className={undefined}
      onBlur={[Function]}
      onChange={[Function]}
      onKeyDown={[Function]}
      placeholder="" />
    <i
      aria-hidden="true"
      className="
                undefined
                undefined
                undefined
              " />
  </div>
</div>
`;

exports[`Storyshots InputtableButton with event handler 1`] = `
<div
  className="input-wrap">
  <div
    className="undefined
                      
                      
                      undefined
          ">
    <button
      className={undefined}
      onClick={[Function]}>
      <i
        aria-hidden="true"
        className="undefined undefined" />
      Search
    </button>
    <input
      className={undefined}
      onBlur={[Function]}
      onChange={[Function]}
      onKeyDown={[Function]}
      placeholder="" />
    <i
      aria-hidden="true"
      className="
                undefined
                undefined
                undefined
              " />
  </div>
</div>
`;

exports[`Storyshots InputtableButton with focused 1`] = `
<div
  className="input-wrap">
  <div
    className="undefined
                      undefined
                      
                      undefined
          ">
    <button
      className={undefined}
      onClick={[Function]}>
      <i
        aria-hidden="true"
        className="undefined undefined" />
      Search
    </button>
    <input
      className={undefined}
      onBlur={[Function]}
      onChange={[Function]}
      onKeyDown={[Function]}
      placeholder="" />
    <i
      aria-hidden="true"
      className="
                undefined
                undefined
                undefined
              " />
  </div>
</div>
`;

exports[`Storyshots InputtableButton with placeholder 1`] = `
<div
  className="input-wrap">
  <div
    className="undefined
                      
                      
                      undefined
          ">
    <button
      className={undefined}
      onClick={[Function]}>
      <i
        aria-hidden="true"
        className="undefined undefined" />
      Search
    </button>
    <input
      className={undefined}
      onBlur={[Function]}
      onChange={[Function]}
      onKeyDown={[Function]}
      placeholder="Find something" />
    <i
      aria-hidden="true"
      className="
                undefined
                undefined
                undefined
              " />
  </div>
</div>
`;

exports[`Storyshots InputtableButton with progress error 1`] = `
<div
  className="input-wrap">
  <div
    className="undefined
                      
                      
                      undefined
          ">
    <button
      className={undefined}
      onClick={[Function]}>
      <i
        aria-hidden="true"
        className="undefined undefined" />
      Search
    </button>
    <input
      className={undefined}
      onBlur={[Function]}
      onChange={[Function]}
      onKeyDown={[Function]}
      placeholder="" />
    <i
      aria-hidden="true"
      className="
                undefined
                undefined
                undefined
              " />
  </div>
</div>
`;

exports[`Storyshots InputtableButton with progress loading 1`] = `
<div
  className="input-wrap">
  <div
    className="undefined
                      
                      
                      undefined
          ">
    <button
      className={undefined}
      onClick={[Function]}>
      <i
        aria-hidden="true"
        className="undefined undefined" />
      Search
    </button>
    <input
      className={undefined}
      onBlur={[Function]}
      onChange={[Function]}
      onKeyDown={[Function]}
      placeholder="" />
    <i
      aria-hidden="true"
      className="
                undefined
                undefined
                undefined
              " />
  </div>
</div>
`;

exports[`Storyshots InputtableButton with progress success 1`] = `
<div
  className="input-wrap">
  <div
    className="undefined
                      
                      
                      undefined
          ">
    <button
      className={undefined}
      onClick={[Function]}>
      <i
        aria-hidden="true"
        className="undefined undefined" />
      Search
    </button>
    <input
      className={undefined}
      onBlur={[Function]}
      onChange={[Function]}
      onKeyDown={[Function]}
      placeholder="" />
    <i
      aria-hidden="true"
      className="
                undefined
                undefined
                undefined
              " />
  </div>
</div>
`;
